# blk

./: .gitignore  CLAUDE.md  Readme.md  blk  pyproject.toml  unblk
src/blkunblk/: __init__.py  cli.py  config.py  dns.py  eventlog.py  friction.py  hosts.py  lockdown.py  prompts.py  recents.py  scheduler.py  validators.py
src/blkunblk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_integration.py
